qa/apps/id-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: id-service
  name: id-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: id-service
  template:
    metadata:
      labels:
        app: id-service
    spec:
      imagePullSecrets:
      - name: images-pull
      volumes:
      - name: db-ca-certificate
        secret:
          secretName: id-service-db-ca-certificate
          defaultMode: 0555
      containers:
      - image: index.docker.io/ferlabcrsj/id-service:ebde652e9a7f489e00c4cae25b2a1c396728d22b-1661358686 # {"$imagepolicy": "cqdg-qa-fluxcd:id-service"}
        name: id-service
        volumeMounts:
        - name: db-ca-certificate
          mountPath: /opt/ca
          readOnly: true
        resources:
          requests:
            memory: "64Mi"
            cpu: '0.25'
          limits:
            memory: "128Mi"
            cpu: '0.50'
