qa/apps/id-service/ingresses.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: id-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
    - hosts:
        - idservice.qa.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: idservice.qa.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            backend:
              serviceName: id-service
              servicePort: 5000
